   force_rport forces RFC 3581 behavior and disables symmetric RTP support.
   Setting it to comedia enables RFC 3581 behavior if the remote side requests it
   and enables symmetric RTP support.
 * Slave SIP channels now set HASH(SIP_CAUSE,<slave-channel-name>) on each
   response.  This permits the master channel to know how each channel dialled
   in a multi-channel setup resolved in an individual way.
 * Added 'externtcpport' and 'externtlsport' options to allow custom port
   configuration for the externip and externhost options when tcp or tls is used.
 * Added support for message body (stored in content variable) to SIP NOTIFY message
   accessible via AMI and CLI.
 * Added 'media_address' configuration option which can be used to explicitly specify
   the IP address to use in the SDP for media (audio, video, and text) streams.
 * Added 'unsolicited_mailbox' configuration option which specifies the virtual mailbox
   that the new/old count should be stored on if an unsolicited MWI NOTIFY message is
   received.
 * Added 'use_q850_reason' configuration option for generating and parsing
   if available  Reason: Q.850;cause=<cause code> header. It is implemented
   in some gateways for better passing PRI/SS7 cause codes via SIP.
 * When dialing SIP peers, a new component may be added to the end of the dialstring
   to indicate that a specific remote IP address or host should be used when dialing
   the particular peer. The dialstring format is SIP/peer/exten/host_or_IP.
 * SRTP SDES support for encrypting calls to/from Asterisk over SIP. The
   ability to selectively force bridged channels to also be encrypted is also
   implemented. Branching in the dialplan can be done based on whether or not
   a channel has secure media and/or signaling.
 * Added directmediapermit/directmediadeny to limit which peers can send direct media
   to each other
 * Added the 'snom_aoc_enabled' option to turn on support for sending Advice of
   Charge messages to snom phones.